--- a/Source/Widgets/Viewer/Viewer.css
+++ b/Source/Widgets/Viewer/Viewer.css
@@ -40,7 +40,8 @@
     bottom: 0;
     left: 169px;
     right: 29px;
-    height: 27px;
+    height:50px;
+    /* height: 27px; */
     padding: 0;
     margin: 0;
     overflow: hidden;
